# Identifier

./: .gitignore  COMPATIBILITY_LIST.md  README.md  README_CN.md  build.gradle  build_versions.gradle  gradle.properties  jitpack.yml  settings.gradle
adapter/: build.gradle
adapter/src/androidTest/java/com/phantomvk/identifier/adapter/: ExampleInstrumentedTest.java
adapter/src/main/java/com/bun/miitmdid/: InfoCode.java
adapter/src/main/java/com/bun/miitmdid/core/: MdidSdkHelper.java  MdidSdkInterface.java
adapter/src/main/java/com/bun/miitmdid/interfaces/: IdSupplier.java  (+2 more)
aidl/: build.gradle
aidl/src/main/: AndroidManifest.xml
aild/: build.gradle
aild/src/main/: AndroidManifest.xml
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/phantomvk/identifier/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  SysMark.cpp
app/src/main/res/layout/: activity_main.xml  activity_settings.xml  item_switch.xml
app/src/main/res/raw/: keep.xml
app/src/main/res/values/: strings.xml  themes.xml  values.xml
app/src/test/java/com/phantomvk/identifier/: ExampleUnitTest.kt
dependencies/: build.gradle
dependencies/src/androidTest/java/com/example/dependencies/: ExampleInstrumentedTest.kt
dependencies/src/main/java/android/app/: OplusNotificationManager.java  ZteDeviceIdentifyManager.java
dependencies/src/main/java/android/os/: ServiceManager.java  SystemProperties.java
dependencies/src/test/java/com/example/dependencies/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+26 files in other folders)
